--- a/src/App.css
+++ b/src/App.css
@@ -3,21 +3,34 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
 }
 
 .App-header {
-  background: rgb(250,250,250);
-  background: radial-gradient(circle, rgba(250,250,250,1) 0%, rgba(224,224,224,1) 67%, rgba(0,0,0,1) 100%);
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: #a5a5a5;
 }
 
 .App-link {
   color: #020024;
+}
+
+.nav-bar {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: larger;
+  text-align: center;
+  list-style-type: none;
+}
+
+ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+li {
+  padding-left: 1vmin;
 }
