--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(250,250,250);
+  background: radial-gradient(circle, rgba(250,250,250,1) 0%, rgba(224,224,224,1) 67%, rgba(0,0,0,1) 100%);
+  min-height: 100vh;
+  color: #a5a5a5;
 }
 
 code {
