--- a/src/App.css
+++ b/src/App.css
@@ -1,36 +1,34 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
-  height: 20vmin;
-}
-
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: #020024;
+  height: 6vmin;
 }
 
 .nav-bar {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: larger;
-  text-align: center;
   list-style-type: none;
+  align-items: right;
 }
 
 ul {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  align-items: center;
 }
 
 li {
   padding-left: 1vmin;
+}
+
+h1 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 5vmin;
+  text-align: center;
+}
+
+Button {
+  width: 100px;
+}
+
+a {
+  color: #a5a5a5;
 }
