--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,14 @@ h1 {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 5vmin;
   text-align: center;
+  font-weight: lighter;
+}
+
+h3 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 2vmin;
+  text-align: left;
+  font-weight: lighter;
 }
 
 Button {
@@ -31,4 +39,8 @@ Button {
 
 a {
   color: #a5a5a5;
+}
+
+.about-us-container {
+  line-height: 4vmin;
 }
