--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 .App-logo {
-  height: 6vmin;
+  height: 10vmin;
 }
 
-.nav-bar {
+/*  .nav-bar {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: larger;
   list-style-type: none;
@@ -43,4 +43,4 @@ a {
 
 .about-us-container {
   line-height: 4vmin;
-}
+} */
