--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
   height: 10vmin;
 }
 
+body { 
+  padding-top: 20%; 
+}
+
 /*  .nav-bar {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: larger;
